Adjust scores page style to avoid overlap between graph and table.

--- a/static/css/angular.css
+++ b/static/css/angular.css
@@ -2,7 +2,3 @@
 li.quote.even {
     background-color: #ccf;
 }
-
-#score-graph {
-    width: 60%;
-}
